backend/check_full.txt
cargo :     Checking 
banter-backend v0.1.0 
(D:\work\projects\HTML
 projects\banter\backe
nd)
At line:1 char:54
+ ... H = "$env:USERPR
OFILE\.cargo\bin;$env:
PATH"; cargo check 
2>&1 | Out-F ...
+                     
                      
       
~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng ba...banter\ba    
ckend):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
warning: unused 
imports: 
`ChannelType`, 
`Channel`, and 
`MemberRole`
  --> src\handlers\ser
vers.rs:11:43
   |
11 | use crate::models
::{Server, 
ServerMember, 
MemberRole, 
CreateServerRequest, 
Channel, ChannelType};
   |                  
                      
   ^^^^^^^^^^         
              ^^^^^^^ 
 ^^^^^^^^^^^
   |
   = note: `#[warn(unu
sed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: unused 
import: `Message`
  --> src\handlers\cha
nnels.rs:11:36
   |
11 |     Channel, 
CreateChannelRequest, 
Message, MessageQuery,
   |                  
                  
^^^^^^^

warning: unused 
import: 
`tokio::sync::mpsc`
 --> src\ws\connection
.rs:8:5
  |
8 | use 
tokio::sync::mpsc;
  |     
^^^^^^^^^^^^^^^^^

warning: unused 
import: `uuid::Uuid`
 --> src\ws\connection
.rs:9:5
  |
9 | use uuid::Uuid;
  |     ^^^^^^^^^^

warning: unused 
imports: 
`ClientEvent` and 
`WsEvent`
  --> src\ws\connectio
n.rs:12:21
   |
12 | use super::events
::{ClientEvent, 
WsEvent};
   |                  
   ^^^^^^^^^^^  
^^^^^^^

error[E0195]: 
lifetime parameters 
or bounds on 
associated function 
`from_request_parts` 
do not match the 
trait declaration
  --> src\auth\supabas
e.rs:36:32
   |
36 |     async fn from
_request_parts(parts: 
&mut Parts, state: 
&AppState) -> 
Result<Self, 
Self::Rejection> {
   |                  
              ^ 
lifetimes do not 
match associated 
function in trait
   |
  ::: C:\Users\GARY\.c
argo\registry\src\inde
x.crates.io-1949cf8c6b
5b557f\axum-core-0.4.5
\src\extract\mod.rs:58
:5
   |
58 |     async fn from
_request_parts(parts: 
&mut Parts, state: 
&S) -> Result<Self, 
Self::Rejection>;
   |     -------------
----------------------
----------------------
----------------------
------------ 
lifetimes in impl do 
not match this 
associated function 
in trait

warning: unused 
variable: `auth`
  --> src\handlers\cha
nnels.rs:95:5
   |
95 |     auth: 
AuthUser,
   |     ^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: `_auth`
   |
   = note: `#[warn(unu
sed_variables)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unused 
variable: `state`
  --> src\ws\connectio
n.rs:18:51
   |
18 | pub async fn hand
le_connection(socket: 
WebSocket, state: 
AppState) {
   |                  
                      
           ^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_state`

For more information 
about this error, try 
`rustc --explain 
E0195`.
warning: 
`banter-backend` (bin 
"banter-backend") 
generated 7 warnings
error: could not 
compile 
`banter-backend` (bin 
"banter-backend") due 
to 1 previous error; 
7 warnings emitted
